:+1: Se ignoran las extensiones .depend y no se descarga la licencia al descargar el repositorio.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@
 .gitignore              export-ignore
 .gitattributes          export-ignore
 .vscode/                export-ignore
+LICENSE                 export-ignore
 .                       linguist-vendored
