--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,10 @@ $RECYCLE.BIN/
 # =====================
 # Compiled binary files
 # =====================
+bin/Debug/*
 
 # Extensions
 *.o
 *.a
 *.layout
-bin/Debug/*
+*.depend
