--- a/base-practica-c.cbp
+++ b/base-practica-c.cbp
@@ -19,6 +19,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="arrays.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="arrays.h" />
 		<Unit filename="input.c">
 			<Option compilerVar="CC" />
 		</Unit>
