:wrench: Se descarta especificamente el archivo binario ejecutable que tiene el nombre del proyecto.

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ $RECYCLE.BIN/
 # =====================
 # Compiled binary files
 # =====================
-bin/Debug/*
+bin/Debug/base-practica-c
 
 # Extensions
 *.o
