:+1: Se agrega el esqueleto de la biblioteca para estructuras y se agrega a las tareas de compilacion.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ $RECYCLE.BIN/
 # Compiled binary files
 # =====================
 bin/Debug/base-practica-c
+bin/Debug/base-practica-c.exe
 
 # Extensions
 *.o
