--- a/base-practica-c.cbp
+++ b/base-practica-c.cbp
@@ -23,10 +23,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="arrays.h" />
-		<Unit filename="input.c">
+		<Unit filename="inputs.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="input.h" />
+		<Unit filename="inputs.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
