--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,6 @@
 .gitattributes          export-ignore
 .vscode/                export-ignore
 LICENSE                 export-ignore
+_config.yml             export-ignore
+index.md                export-ignore
 .                       linguist-vendored
