:+1: Se configura un nuevo modulo para colocar las funciones a reutilizar para el tipo de dato de Persona.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "structs.c",
                 "arrays.c",
                 "input.c",
+                "persons.c",
                 "main.c"
             ],
             "problemMatcher": [
@@ -30,6 +31,7 @@
                 "structs.c",
                 "arrays.c",
                 "input.c",
+                "persons.c",
                 "main.c"
             ],
             "problemMatcher": []
