--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "structs.c",
                 "arrays.c",
                 "input.c",
+                "menu.c",
                 "persons.c",
                 "main.c"
             ],
@@ -31,6 +32,7 @@
                 "structs.c",
                 "arrays.c",
                 "input.c",
+                "menu.c",
                 "persons.c",
                 "main.c"
             ],
