--- a/base-practica-c.cbp
+++ b/base-practica-c.cbp
@@ -30,6 +30,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="menu.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="menu.h" />
 		<Unit filename="persons.c">
 			<Option compilerVar="CC" />
 		</Unit>
