--- a/base-practica-c.cbp
+++ b/base-practica-c.cbp
@@ -23,6 +23,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="arrays.h" />
+		<Unit filename="entities.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="entities.h" />
 		<Unit filename="inputs.c">
 			<Option compilerVar="CC" />
 		</Unit>
