:+1: Se agrega un modulo para implementar funciones de tipo de dato basado en Objetos.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,7 @@
                 "menu.c",
                 "entities.c",
                 "persons.c",
+                "objects.c",
                 "main.c"
             ],
             "problemMatcher": [
@@ -36,6 +37,7 @@
                 "menu.c",
                 "entities.c",
                 "persons.c",
+                "objects.c",
                 "main.c"
             ],
             "problemMatcher": []
