--- a/base-practica-c.cbp
+++ b/base-practica-c.cbp
@@ -38,6 +38,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
+		<Unit filename="objects.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="objects.h" />
 		<Unit filename="persons.c">
 			<Option compilerVar="CC" />
 		</Unit>
